feat: implement error handling system and integrate fmt library
- Added `ErrorCode` enum and `ErrorInfo` struct to define error types and their descriptions.
- Created `ErrorRegistry` singleton to manage error information and provide lookup functionality.
- Introduced `ErrorReporter` methods to report errors using `ErrorCode` and format messages with `fmt`.
- Updated `CMakeLists.txt` to include the `fmt` library as a dependency.
- Enhanced `README.md` to document the new dependencies required for building the project.
- Added new header files for error handling in the `include/tooi/core` directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# --- Find Packages ---
+find_package(fmt REQUIRED) # Find the fmt library installed via Brew
+
 # --- Linenoise Dependency ---
 # Define linenoise as a library using its source file
 add_library(linenoise STATIC
@@ -26,6 +29,7 @@ add_executable(tooi
     src/core/interpreter.cpp
     src/core/scanner.cpp
     src/core/error_reporter.cpp
+    src/core/error_registry.cpp
     src/cli/args_parser.cpp
     src/cli/repl.cpp
     src/cli/run_from_file.cpp
@@ -34,10 +38,16 @@ add_executable(tooi
 # Specify include directories for *your* project AFTER defining the target
 target_include_directories(tooi PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
+    # The fmt::fmt target automatically adds its include directory when linked,
+    # but explicitly adding might resolve issues in some setups, though often redundant.
+    # $<TARGET_PROPERTY:fmt::fmt,INTERFACE_INCLUDE_DIRECTORIES> # Alternative way
 )
 
-# Link tooi against linenoise
-target_link_libraries(tooi PRIVATE linenoise)
+# Link tooi against dependencies
+target_link_libraries(tooi PRIVATE 
+    linenoise
+    fmt::fmt # Linking fmt::fmt SHOULD also provide include directories via its INTERFACE properties
+)
 
 # Ensure your executable also knows about its own include dir (if not covered by INTERFACE above)
 # Usually redundant if INTERFACE is used on target_include_directories for tooi
